--- a/skeleton/Gemfile
+++ b/skeleton/Gemfile
@@ -3,3 +3,17 @@ source "https://rubygems.org"
 gem 'activesupport'
 gem 'rspec', '~> 3.1.0'
 gem 'sqlite3'
+
+# Run 'annotate' in Terminal to add helpful comments to models.
+gem 'annotate'
+
+# These two give you a great error handling page.
+# But make sure to never use them in production!
+gem 'better_errors'
+gem 'binding_of_caller'
+
+# Gotta have byebug...
+gem 'byebug'
+
+# pry > irb
+gem 'pry-rails'
